Fix post-meta icon alignment

--- a/sass/components/_post-meta.scss
+++ b/sass/components/_post-meta.scss
@@ -22,8 +22,6 @@
 
   i {
     margin-right: 5px;
-    position: relative;
-    top: 2px;
   }
 
 }
